# Django_training003

./: .gitignore  mypy.ini  pyproject.toml
base/: admin.py  forms.py
base/migrations/: 0001_initial.py  0002_alter_item_tags.py  0002_order.py
base/models/: __init__.py  account.py  item.py  order.py
base/views/: __init__.py  account.py  cart.py  item.py  order.py  payment.py
config/: custom_context_processors.py  settings.py  urls.py
secrets/: .env.example
templates/: base.html
templates/pages/: account.html  cancel.html  cart.html  index.html  item.html  item_list.html  login_signup.html  order.html  orders.html  profile.html  success.html
templates/snippets/: footer.html  head_line.html  header.html  item_add_box.html  item_box.html  item_pagination.html  messages.html
